API bulk action: host_group_config bulk delete
