# cmk/gui/plugins/openapi/endpoints/host_group_config.py
@@ -4,6 +4,10 @@
 # This file is part of Checkmk (https://checkmk.com). It is subject to the terms and
 # conditions defined in the file COPYING, which is part of this source code package.
 """Host-groups"""
+import http.client
+
+from connexion import ProblemException  # type: ignore[import]
+
 from cmk.gui import watolib
 from cmk.gui.http import Response
 from cmk.gui.plugins.openapi.endpoints.utils import (
@@ -63,6 +67,28 @@ def delete(params):
     return Response(status=204)
 
 
+@endpoint_schema(constructors.domain_type_action_href('host_group_config', 'bulk-delete'),
+                 '.../delete',
+                 method='delete',
+                 request_schema=request_schemas.BulkDeleteHostGroup,
+                 output_empty=True)
+def bulk_delete(params):
+    """Bulk delete host group configs"""
+    # TODO: etag implementation
+    entries = params['entries']
+    for group_name in entries:
+        message = "host group %s was not found" % group_name
+        _group = _fetch_host_group(
+            group_name,
+            status=400,
+            message=message,
+        )  # TODO: etag check should be done here
+
+    for group_name in entries:
+        watolib.delete_group(group_name, 'host')
+    return Response(status=204)
+
+
 @endpoint_schema(constructors.object_href('host_group_config', '{name}'),
                  '.../update',
                  method='put',
@@ -94,8 +120,13 @@ def get(params):
     return serve_group(group, serialize_group('host_group_config'))
 
 
-def _fetch_host_group(ident):
+def _fetch_host_group(ident, status=404, message=None):
     groups = load_host_group_information()
-    group = groups[ident].copy()
+    try:
+        group = groups[ident].copy()
+    except KeyError as exc:
+        if message is None:
+            message = str(exc)
+        raise ProblemException(status, http.client.responses[status], message)
     group['id'] = ident
     return group
